feat: Add initial seed data for sujetos pasivos, predios, and licencias comerciales